# rover-2025

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt  rover.urdf
arm/: package.xml  setup.py
arm/archive/: allArmJointsPS4.py  allArmJointsv2.py  armCANCommunication.py  armCANCommunicationV2.py  armCANCommunicationV3.py  arm_backup_node.py  arm_firmware_node.py
arm/arm/: allArmJointsv2.py  armCANCommunication.py  armCANCommunicationV2.py  armCANCommunicationV3.py  arm_backup_node.py  arm_control_node.py  arm_firmware_node.py  human_arm_control.py
arm/firmware/: arm_controller.py
arm/launch/: arm_launch.py
arm/test/: IK_unit_tests.py  human_control_tests.py  mock_gamepad_publisher.py  planar_motion_test.py  sim_bridge_node.py
arm_control/: package.xml  setup.cfg  setup.py
arm_control/arm_control/: allArmJointsPS4.py  armCANCommunicationV2.py  arm_backup_node.py  arm_control_node.py  arm_controller.py  arm_firmware_node.py  build_tests.py  human_arm_control.py  test.py
arm_control/arm_sim/: ros2_arm_sim.py
arm_control/launch/: arm_viz_launch.py
arm_control/sim/: arm_sim.py  arm_viz.py  arm_viz2.py  arm_viz_rviz.py
arm_control/src/: allArmJointsv2.py  armCANCommunicationV3.py  arm_autonomy.py  arm_backup_node.py  arm_control_node.py  arm_controller.py  arm_controller_2.py  arm_firmware_node.py  arm_kinematics.py  build_tests.py  human_arm_control.py  mock_gamepad_publisher.py  node_arm_control.py  sim_bridge_node.py  sim_node_arm_control.py  simple_wrist_api.py  wrist_control.py
arm_control/test/: IK_unit_tests.py  calibration_service_test.py  human_control_tests.py  mock_gamepad_publisher.py  planar_motion_test.py  plannar_motion_test.py  sim_bridge_node.py
arm_control_old/: setup.py
arm_control_old/launch/: arm_hardware_launch.py  arm_sim_launch.py  arm_viz_double_launch.py
arm_control_old/sim/: arm_sim.py  arm_viz.py  arm_viz_rviz.py
arm_control_old/src/: arm_controller.py  arm_unit_tests.py
autonomy/: package.xml  setup.py
camera/: README.md  activate_env.sh  check_status.py  config.yml  gstreamer_pipeline.py  run_vision_server.sh
cameras/: CMakeLists.txt  README.md  camera_publisher.py  package.xml  setup.cfg  setup.py
cameras/cameras/: aruco_detector.py  aruco_identifier.py  cam_publisher_node.py  cam_subscriber_node.py  image_subscriber.py  sub.py  usbcam_node.py
control/: CMakeLists.txt  package.xml  pantilt_control.py  setup.py
cpp_pubsub/: CMakeLists.txt  gps_node.py  package.xml
devops/: Dockerfile  README.md  docker-compose.yml  setup_devops.sh
docker/: Dockerfile  README.md  docker-compose.yml  download-drumheller-tiles.sh  linux_docker_setup.sh
drive/: README.md  package.xml  setup.py
drive_control/: package.xml  setup.cfg  setup.py
elec_software_api/: Dockerfile  README.md  arm.py  docker-compose.yml  drive.py  main.py  pan_tilt_gps.py  power_board.py
human_control_interface/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
human_control_interface/human_control_interface/: GamepadProcess(legacy).py
human_control_interface/launch/: arm_launch.py  basestation_launch.sh  drive_arm_launch.py  drive_launch.py  drive_science_launch.py  human_control_interface_launch.py
human_control_interface/msg/: Gamepad_input.msg  Joystick_input.msg
human_control_interface/src/: AngularGamepad.py  Gamepad.py  GamepadInputDist.py  GamepadProcess.py  gamepad.py  gamepad_Mqtt_sub.py  gamepad_input.json  gamepad_input_mqtt_pub.py  gamepad_input_pub.py  rover_telemetry_R&D.md
jetson_firmware/: __init__.py  communication.py  drive_power.py
msg_interface/: CMakeLists.txt  package.xml
msg_srv_interface/: CMakeLists.txt  package.xml
nav2/: setup.py
pybullet_drive_sim/: package.xml  setup.cfg  setup.py
react-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.config.ts
rover_nav2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rover_nav2/behavior_trees/: BT.xml
rover_nav2/config/: rover_params.yaml
rover_nav2/include/nav2_behavior_tree/plugins/: pong_recieved_bt_node.hpp
rover_nav2/launch/: nav_launch.py  ping_pong_launch.py
rover_nav2/src/: bt_ros_node.cpp
rover_system/: CMakeLists.txt  package.xml
science/: package.xml  setup.cfg  setup.py
sim/: CMakeLists.txt  README.md  package.xml
sim/4-Wheel-Robot/gazebo_simulation/urdf/: rs_robot.urdf:Zone.Identifier
sim/config/: control.yml
sim/halley/: halley_rover.urdf  rover.urdf.xacro
sim/halley/meshes/: base_link.STL  wheel_1.STL  wheel_2.STL  wheel_3.STL  wheel_4.STL
sim/launch/: leo.launch.py  mock_drive_test.launch.py  rover_gz_sim.launch.py  rover_halley_gz_sim.launch.py  test.launch.py
sim/mock_nodes/: __init__.py  mock_drive_firmware_node.py  mock_gps_node.py
sim/mock_nodes/config/: test_scenarios.yaml
sim/model/: MR_arm.urdf.xacro  MR_arm_no_collision.urdf.xacro  MR_arm_seb.urdf.xacro  camera.urdf.xacro  depth_camera.urdf.xacro  imu.urdf  lidar.urdf  rover.urdf.xacro  thermal_camera.urdf  urdf_viz.py  wheel.urdf.xacro
sim/model/worlds/: marsyard2020.sdf
sim/model/worlds/marsyard2020_terrain/: model.sdf
sim/rviz/: urdf.rviz
system/: CMakeLists.txt  package.xml
teleop/: .gitignore  CMakeLists.txt  README.md  TESTING_WITHOUT_HARDWARE.md  activate_env.sh  package.xml  requirements.txt  setup_env.sh  start-teleop-system.sh  start_teleop.sh  test_demo.sh
temp/: communication.py  main.py
utils/: get_acm_port.py  morse_translator.py
vision/: __init__.py  activate_env.sh  config.py  config.yml  gstreamer_pipeline.py  run_vision_server.sh  setup_env.sh  vision_server.py
(+431 files in other folders)
