<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_nav2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="isaacmackenzie75@gmail.com">isaac</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>opennav_docking</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
